@@ -9,6 +9,7 @@ Release history for Dist-Zilla-App-Command-dumpphases
 
  [Internals]
  - Avoid pointless method calls to resolve defaults.
+ - Be less "smart" with loading theme plugins.
 
 1.000005 2014-10-31T00:00:38Z 45e3144
  [Dependencies::Stats]
